// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResignRegistration should render 1st step 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC gzoIwh"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="sc-fznxsB bDQBTR"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center h-full mr-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full p-2 mx-6 my-auto cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <a
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <button
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--receive"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="ml-8 text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="flex cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="ml-4 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxgMl daFHdi -mr-2 border-theme-primary-contrast"
                  >
                    <span
                      class="text-theme-neutral-dark"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background"
                      >
                        JO
                      </span>
                    </div>
                    <span
                      class="sc-fzqBZW lkOBXr flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznJRM fQUPFP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoiQi fQHPRZ"
              >
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="ResignRegistration__first-step"
                  >
                    <h1
                      class="mb-0"
                    >
                      Delegate Resignation
                    </h1>
                    <div
                      class="text-theme-neutral-dark"
                    >
                      Resign your delegate for always.
                    </div>
                    <div
                      class="mt-6"
                    >
                      <div
                        class="flex rounded-lg overflow-hidden bg-theme-warning"
                      >
                        <div
                          class="sc-AxhCb emmdwf flex items-center justify-center text-theme-warning bg-theme-warning-200"
                        >
                          <div
                            class="sc-AxirZ bMjbpr"
                            height="30"
                            width="30"
                          >
                            <svg>
                              alert-default.svg
                            </svg>
                          </div>
                        </div>
                        <div
                          class="sc-AxiKw ffnSzD flex-1 bg-theme-warning-100"
                        >
                          Keep in mind that you cannot restore your delegate after the resignation has been registered on the blockchain.
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        class="flex items-center py-6 true "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="mb-2 text-sm font-semibold text-theme-neutral"
                            >
                              <span
                                class="mr-1"
                              >
                                Sender
                              </span>
                              <div
                                class="sc-fznZeY kKCHjH"
                                color="warning"
                              >
                                <span
                                  class="text-sm"
                                >
                                  Your address
                                </span>
                              </div>
                            </div>
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D5sRKW…cvJtwb
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Delegate Name
                          </div>
                          <div
                            class="font-semibold"
                          >
                            arkx
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pt-6 pb-0"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="font-semibold"
                          >
                            <fieldset
                              class="sc-AxheI dThsOi font-normal"
                            >
                              <label
                                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                                data-testid="FormLabel"
                                for="name"
                              >
                                Transaction Fee
                                <div
                                  class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                                  data-testid="FormLabel__required"
                                />
                              </label>
                              <div
                                class="flex space-x-2"
                                data-testid="InputFee"
                              >
                                <div
                                  class="flex-1"
                                >
                                  <div
                                    class="sc-fzpans diytpf"
                                  >
                                    <input
                                      class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                                      data-testid="InputCurrency"
                                      name="name"
                                      type="text"
                                      value="25"
                                    />
                                  </div>
                                </div>
                                <div>
                                  <div
                                    class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
                                    data-testid="SelectionBar"
                                    role="radiogroup"
                                  >
                                    <button
                                      aria-checked="true"
                                      class="sc-fzoyTs chLCDw relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                                      data-testid="SelectionBarOption"
                                      role="radio"
                                      type="button"
                                    >
                                      Min
                                    </button>
                                    <button
                                      aria-checked="true"
                                      class="sc-fzoyTs chLCDw relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                                      data-testid="SelectionBarOption"
                                      role="radio"
                                      type="button"
                                    >
                                      Average
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="sc-AxhUy fgsjJU"
                    color="primary"
                    data-testid="ResignRegistration__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhUy hMFbHm"
                    color="primary"
                    data-testid="ResignRegistration__continue-button"
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResignRegistration should render 2nd step 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC gzoIwh"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="sc-fznxsB bDQBTR"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center h-full mr-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full p-2 mx-6 my-auto cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <a
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <button
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--receive"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="ml-8 text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="flex cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="ml-4 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxgMl daFHdi -mr-2 border-theme-primary-contrast"
                  >
                    <span
                      class="text-theme-neutral-dark"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background"
                      >
                        JO
                      </span>
                    </div>
                    <span
                      class="sc-fzqBZW lkOBXr flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznJRM fQUPFP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoiQi fQHPRZ"
              >
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="ResignRegistration__second-step"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        Transaction Review
                      </h1>
                      <p
                        class="text-theme-neutral-dark"
                      >
                        Check the information again before Resignation
                      </p>
                    </div>
                    <div
                      class="mt-4 grid grid-flow-row gap-2"
                    >
                      <div
                        class="flex items-center py-6 true "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Network
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex-auto font-semibold truncate text-md text-theme-neutral-800 max-w-24"
                            >
                              ARK Devnet
                            </div>
                          </div>
                        </div>
                        <div
                          class="ml-1 text-theme-danger"
                        >
                          <div
                            class="sc-AxgMl daFHdi bg-theme-background border-theme-danger-light"
                          >
                            <div
                              class="sc-AxirZ eEbZjj"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="mb-2 text-sm font-semibold text-theme-neutral"
                            >
                              <span
                                class="mr-1"
                              >
                                Sender
                              </span>
                              <div
                                class="sc-fznZeY kKCHjH"
                                color="warning"
                              >
                                <span
                                  class="text-sm"
                                >
                                  Your address
                                </span>
                              </div>
                            </div>
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D5sRKW…cvJtwb
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Delegate Name
                          </div>
                          <div
                            class="font-semibold"
                          >
                            arkx
                          </div>
                        </div>
                      </div>
                      <div
                        class="my-4"
                      >
                        <div
                          class="border rounded-lg border-theme-neutral-300"
                        >
                          <div
                            class="relative p-3"
                          >
                            <div
                              class="grid grid-cols-2 divide-x divide-gray-400"
                            >
                              <div
                                class="flex flex-col justify-center px-6 py-5"
                              >
                                <span
                                  class="text-sm text-theme-neutral"
                                >
                                  Transaction(s) Amount
                                </span>
                                <span
                                  class="mt-2 font-semibold"
                                  data-testid="total-amount-box__transaction-amount"
                                >
                                  0 ARK
                                </span>
                              </div>
                              <div
                                class="flex flex-col justify-center px-6 py-5 text-right"
                              >
                                <span
                                  class="text-sm text-theme-neutral"
                                >
                                  Transaction fee
                                </span>
                                <span
                                  class="mt-2 text-lg font-semibold"
                                  data-testid="total-amount-box__transaction-fee"
                                >
                                  25 ARK
                                </span>
                              </div>
                            </div>
                            <div
                              class="absolute top-0 bottom-0 left-0 right-0 flex items-center justify-center h-full text-center"
                            >
                              <div
                                class="px-1 py-2 bg-white"
                              >
                                <div
                                  class="sc-AxirZ fkjLBb"
                                  height="15"
                                  width="15"
                                >
                                  <svg>
                                    plus.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="flex flex-col items-center border-t rounded-b-lg border-theme-neutral-300 justfiy-center py-7 bg-theme-neutral-contrast"
                          >
                            <span
                              class="text-sm text-theme-neutral"
                            >
                              Total Amount
                            </span>
                            <span
                              class="text-2xl font-bold"
                              data-testid="total-amount-box__total"
                            >
                              25 ARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="sc-AxhUy fgsjJU"
                    color="primary"
                    data-testid="ResignRegistration__back-button"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhUy hMFbHm"
                    color="primary"
                    data-testid="ResignRegistration__continue-button"
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResignRegistration should render 3rd step 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC gzoIwh"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="sc-fznxsB bDQBTR"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center h-full mr-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full p-2 mx-6 my-auto cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <a
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <button
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--receive"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="ml-8 text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="flex cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="ml-4 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxgMl daFHdi -mr-2 border-theme-primary-contrast"
                  >
                    <span
                      class="text-theme-neutral-dark"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background"
                      >
                        JO
                      </span>
                    </div>
                    <span
                      class="sc-fzqBZW lkOBXr flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznJRM fQUPFP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoiQi fQHPRZ"
              >
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="ResignRegistration__third-step"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        Authenticate
                      </h1>
                      <div
                        class="text-theme-neutral-dark"
                      >
                        Enter your twelve word mnemonic to authenticate the transaction.
                      </div>
                      <div
                        class="mt-8"
                      >
                        <fieldset
                          class="sc-AxheI dThsOi flex flex-col space-y-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="mnemonic"
                          >
                            Mnemonic
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                          <div
                            class="sc-fzpans diytpf max-w-20"
                            data-testid="InputPassword"
                          >
                            <input
                              class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
                              data-testid="ResignRegistration__mnemonic"
                              name="mnemonic"
                              type="password"
                            />
                            <div
                              class="sc-AxmLO sc-fzoLsD ijnrnY my-px mr-4"
                            >
                              <button
                                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
                                data-testid="InputPassword__toggle"
                                type="button"
                              >
                                <div
                                  class="sc-AxirZ iQaTP"
                                  height="1em"
                                  width="1em"
                                >
                                  <svg>
                                    eye.svg
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="sc-AxhUy fgsjJU"
                    color="primary"
                    data-testid="ResignRegistration__back-button"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhUy hMFbHm space-x-2"
                    color="primary"
                    data-testid="ResignRegistration__send-button"
                    type="submit"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                    <span>
                      Send
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResignRegistration should should go back 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC gzoIwh"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="sc-fznxsB bDQBTR"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center h-full mr-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full p-2 mx-6 my-auto cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <a
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <button
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--receive"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="ml-8 text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="flex cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="ml-4 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxgMl daFHdi -mr-2 border-theme-primary-contrast"
                  >
                    <span
                      class="text-theme-neutral-dark"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background"
                      >
                        JO
                      </span>
                    </div>
                    <span
                      class="sc-fzqBZW lkOBXr flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznJRM fQUPFP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoiQi fQHPRZ"
              >
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="ResignRegistration__first-step"
                  >
                    <h1
                      class="mb-0"
                    >
                      Delegate Resignation
                    </h1>
                    <div
                      class="text-theme-neutral-dark"
                    >
                      Resign your delegate for always.
                    </div>
                    <div
                      class="mt-6"
                    >
                      <div
                        class="flex rounded-lg overflow-hidden bg-theme-warning"
                      >
                        <div
                          class="sc-AxhCb emmdwf flex items-center justify-center text-theme-warning bg-theme-warning-200"
                        >
                          <div
                            class="sc-AxirZ bMjbpr"
                            height="30"
                            width="30"
                          >
                            <svg>
                              alert-default.svg
                            </svg>
                          </div>
                        </div>
                        <div
                          class="sc-AxiKw ffnSzD flex-1 bg-theme-warning-100"
                        >
                          Keep in mind that you cannot restore your delegate after the resignation has been registered on the blockchain.
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        class="flex items-center py-6 true "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="mb-2 text-sm font-semibold text-theme-neutral"
                            >
                              <span
                                class="mr-1"
                              >
                                Sender
                              </span>
                              <div
                                class="sc-fznZeY kKCHjH"
                                color="warning"
                              >
                                <span
                                  class="text-sm"
                                >
                                  Your address
                                </span>
                              </div>
                            </div>
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D5sRKW…cvJtwb
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                              title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 "
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Delegate Name
                          </div>
                          <div
                            class="font-semibold"
                          >
                            arkx
                          </div>
                        </div>
                      </div>
                      <div
                        class="flex items-center py-6 border-t border-dashed border-theme-neutral-300 pt-6 pb-0"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="font-semibold"
                          >
                            <fieldset
                              class="sc-AxheI dThsOi font-normal"
                            >
                              <label
                                class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                                data-testid="FormLabel"
                                for="name"
                              >
                                Transaction Fee
                                <div
                                  class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                                  data-testid="FormLabel__required"
                                />
                              </label>
                              <div
                                class="flex space-x-2"
                                data-testid="InputFee"
                              >
                                <div
                                  class="flex-1"
                                >
                                  <div
                                    class="sc-fzpans diytpf"
                                  >
                                    <input
                                      class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                                      data-testid="InputCurrency"
                                      name="name"
                                      type="text"
                                      value="25"
                                    />
                                  </div>
                                </div>
                                <div>
                                  <div
                                    class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
                                    data-testid="SelectionBar"
                                    role="radiogroup"
                                  >
                                    <button
                                      aria-checked="true"
                                      class="sc-fzoyTs chLCDw relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                                      data-testid="SelectionBarOption"
                                      role="radio"
                                      type="button"
                                    >
                                      Min
                                    </button>
                                    <button
                                      aria-checked="true"
                                      class="sc-fzoyTs chLCDw relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
                                      data-testid="SelectionBarOption"
                                      role="radio"
                                      type="button"
                                    >
                                      Average
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="sc-AxhUy fgsjJU"
                    color="primary"
                    data-testid="ResignRegistration__back-button"
                    disabled=""
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhUy hMFbHm"
                    color="primary"
                    data-testid="ResignRegistration__continue-button"
                    type="button"
                  >
                    Continue
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ResignRegistration should show authentication error 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzpjYC gzoIwh"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="sc-fznxsB bDQBTR"
            >
              <svg
                width="40"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center h-full mr-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full p-2 mx-6 my-auto cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <a
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--send"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full text-theme-primary-300"
            >
              <button
                class="p-2 mx-6 my-auto"
                data-testid="navbar__buttons--receive"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="ml-8 text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="flex cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="ml-4 cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-AxgMl daFHdi -mr-2 border-theme-primary-contrast"
                  >
                    <span
                      class="text-theme-neutral-dark"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="relative inline-flex items-center justify-center align-middle rounded-full"
                    data-testid="navbar__user--avatar"
                  >
                    <div
                      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fGjnTn"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background"
                      >
                        JO
                      </span>
                    </div>
                    <span
                      class="sc-fzqBZW lkOBXr flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fznJRM fQUPFP flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzoiQi fQHPRZ"
              >
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX kPdKVU"
                />
                <li
                  class="sc-fznWqX PbNft"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    data-testid="ResignRegistration__third-step"
                  >
                    <div>
                      <h1
                        class="mb-0"
                      >
                        Authenticate
                      </h1>
                      <div
                        class="text-theme-neutral-dark"
                      >
                        Enter your twelve word mnemonic to authenticate the transaction.
                      </div>
                      <div
                        class="mt-8"
                      >
                        <fieldset
                          class="sc-AxheI cTMxmi flex flex-col space-y-2"
                        >
                          <label
                            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                            data-testid="FormLabel"
                            for="mnemonic"
                          >
                            Mnemonic
                            <div
                              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                              data-testid="FormLabel__required"
                            />
                          </label>
                          <div
                            class="sc-fzpans diytpf max-w-20"
                            data-testid="InputPassword"
                          >
                            <input
                              aria-invalid="true"
                              class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
                              data-testid="ResignRegistration__mnemonic"
                              name="mnemonic"
                              type="password"
                            />
                            <div
                              class="sc-AxmLO sc-fzoLsD ijnrnY my-px mr-4"
                            >
                              <button
                                class="flex items-center justify-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
                                data-testid="InputPassword__toggle"
                                type="button"
                              >
                                <div
                                  class="sc-AxirZ iQaTP"
                                  height="1em"
                                  width="1em"
                                >
                                  <svg>
                                    eye.svg
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                          <p
                            class="text-sm text-theme-danger"
                          >
                            Invalid Mnemonic
                          </p>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-8 space-x-3"
                >
                  <button
                    class="sc-AxhUy fgsjJU"
                    color="primary"
                    data-testid="ResignRegistration__back-button"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxhUy hMFbHm space-x-2"
                    color="primary"
                    data-testid="ResignRegistration__send-button"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                    <span>
                      Send
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
